namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-one
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-two
