hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          image: nginx  # Replace with your application image
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html  # Adjust this path as needed
              name: my-storage
      volumes:
        - name: my-storage
          persistentVolumeClaim:
            claimName: my-pvc  # Replace with your PVC name
