nginx-statefulset-updated.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
  namespace: namespace-one
spec:
  serviceName: "nginx-service"  # Name of the service to be associated with this StatefulSet
  selector:
    matchLabels:
      app: nginx                 # Ensure this label is also on the pods
  replicas: 1                    # Set the number of replicas
  template:
    metadata:
      labels:
        app: nginx               # Label the pods with "app: nginx" to match the selector
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf  # Mount nginx.conf from ConfigMap
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config  # Reference to the ConfigMap
