hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: my-namespace
spec:
  type: NodePort
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 31871
  selector:
    app: hello-world
