nginx-service-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: namespace-one
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx  # Ensure this matches the labels on your Nginx pods
