service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-nodejs-service
spec:
  selector:
    app: p2-nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
